--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <div class="container">
     <div class="card-deck">
       <div class="card d-flex align-items-center">
-        <img class="card-img-top" src="ICON/book.png" alt="Card image cap">
+        <img class="card-img-top img-fluid" src="ICON/book.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">1500+Topic</h5>
           <p class="card-text">Learn anything</p>
@@ -73,7 +73,7 @@
       </div>
 
       <div class=" card d-flex align-items-center">
-        <img class="card-img-top" src="ICON/Student.png" alt="Card image cap">
+        <img class="card-img-top img-fluid" src="ICON/Student.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">1800+Topic </h5>
           <p class="card-text">Learn anything</p>
@@ -81,7 +81,7 @@
         </div>
       </div>
       <div class="card d-flex align-items-center">
-        <img class="card-img-top" src="ICON/Test.png" alt="Card image cap">
+        <img class="card-img-top img-fluid" src="ICON/Test.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">9k Test Token</h5>
           <p class="card-text">Learn anything</p>
@@ -106,46 +106,137 @@
 
 <div class="container">
 
-<h3 class="text-center">Online Courses</h3>
-<div class="card-deck">
-  <div class="card">
-    <img class="card-img-top" src="Photos/Morder pyschology.png" alt="Card image cap">
+<h3 class="text-center font-weight-bold">Online Courses</h3>
+<div class="card-deck py-5">
+  <div class="card pic  ">
+    <img class="card-img-middle img-fluid" src="Photos/Morder pyschology.png" alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <h5 class="card-title">Modern pyschology</h5>
+      <p class="card-text">Designation</p>
+      <button class="btn"> Buy Course</button>
     </div>
     <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
+      <div class="online-footer d-flex justify-content-between">
+        <div class="d-flex align-items-center">
+        <img src="ICON/calendar.png" alt="">
+        <h6 class="mt-2">Start 20 April,2021</h6>
+        </div>
+        <div class="d-flex align-items-center">
+          <img src="ICON/people.png" alt="">
+          <h6 class="mt-2">60 Seats</h6>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="card">
-    <img class="card-img-top" src="Photos/Morder psyc.png" alt="Card image cap">
+  <div class="card pic1">
+    <img class="card-img-middle img-fluid" src="Photos/Morder psyc.png" alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <h5 class="card-title">Modern pyschology</h5>
+      <p class="card-text">Designation</p>
+      <button class="btn">Buy Course</button>
     </div>
     <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
+      <div class="online-footer d-flex justify-content-between">
+        <div class="d-flex align-items-center">
+        <img src="ICON/calendar.png" alt="">
+        <h6 class="mt-2">Start 20 April,2021</h6>
+        </div>
+        <div class="d-flex align-items-center">
+          <img src="ICON/people.png" alt="">
+          <h6 class="mt-2">60 Seats</h6>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="card">
-    <img class="card-img-top" src="Photos/Morder pychons.png" alt="Card image cap">
+  <div class="card pic2">
+    <img class="card-img-middle img-fluid" src="Photos/Morder pychons.png" alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      <h5 class="card-title">Modern pyschology</h5>
+      <p class="card-text">Designation</p>
+      <button class="btn">Buy Course</button>
     </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
+    <div class="card-footer"> 
+      <div class="online-footer d-flex justify-content-between">
+      <div class="d-flex align-items-center">
+      <img src="ICON/calendar.png" alt="">
+      <h6 class="mt-2">Start 20 April,2021</h6>
+      </div>
+      <div class="d-flex align-items-center">
+        <img src="ICON/people.png" alt="">
+        <h6 class="mt-2">60 Seats</h6>
+      </div>
     </div>
   </div>
+  </div>
+</div>
+</div>
+
+<!--TESTIMONOAL-->
+<div class="container ">
+<h3 class="text-center font-weight-bold">Testimonial</h3>
+<div class="test py-5" >
+<div class="row d-flex justify-content-center">
+  <div class="col-md-4 d-flex justify-content-end">
+  
+<img class="img-fluid " src="Photos/Man.png" alt="">
+</div>
+<div class=" col-md-8 d-flex justify-content-between">
+<p>There are many variations of passages of Lorem Ipsum available, but the
+  majority have suffered alteration in some form, by injected humour, 
+ or randomised words which don't look even slightly believable.</p>
+ </div>
+</div>
 </div>
 
 </div>
 
+<!--last part-->
 
-
-
-
+<div class="last-part">
+<div class="container">
+<div class="row text-white py-4">
+  <div class="col-md-5">
+<p>Millions of people of all ages and from around
+  the world are improving their lives with us</p>
+  </div>
+  <div class="col-md-6">
+    <div class="row">
+  <div class="col-md-4">
+<ul class="list">
+  <h5>Course</h5>
+  <li>Graphic Design </li>
+  <li>Web Design</li>
+  <li>Business</li>
+  <li>Marketing</li>
+  <li>Engineering</li>
+</ul>
+  </div>
+  <div class="col-md-4">
+  
+    <ul class="list">
+      <h5>Team</h5>
+      <li>Graphic Design </li>
+      <li>Web Design</li>
+      <li>Business</li>
+      <li>Marketing</li>
+      <li>Engineering</li>
+    </ul>
+  </div>
+  <div class="col-md-4">
+    <ul class="list">
+      <h5>Useful Link</h5>
+      <li>Graphic Design </li>
+      <li>Web Design</li>
+      <li>Business</li>
+      <li>Marketing</li>
+      <li>Engineering</li>
+    </ul>
+  </div>
+</div>
+</div>
+</div>
+</div>
+</div>
 
 
 
