--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Varius blandit facilisis quam netus.</p>
                 <button class="btn">Get Started</button>
             </div>
-            <div class="col-md-6">
-              <img class="img-fluid" src="Photos/Illustration.png" alt="">
+            <div class="col-md-6 photo">
+              <img class="img-fluid w-100" src="Photos/Illustration.png" alt="">
             </div>
             </div>
           </div>
@@ -199,7 +199,7 @@
 <p>Millions of people of all ages and from around
   the world are improving their lives with us</p>
   </div>
-  <div class="col-md-6">
+  <div class="col-md-7">
     <div class="row">
   <div class="col-md-4">
 <ul class="list">
