--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
-              <ul class="navbar-nav">
+            <div class="collapse navbar-collapse " id="navbarNav">
+              <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
                   <a class="nav-link" href="#">Books <span class="sr-only">(current)</span></a>
                 </li>
@@ -235,6 +235,10 @@
 </div>
 </div>
 </div>
+<div  class="text-center">
+  <small class="text-white">Copyright © 2020 Ibrahim Khalil Himu</small> 
+ </div>
+
 </div>
 </div>
 
